objects/blng__Refund__c.object
<CustomObject>
    <fields>
        <fullName>blng__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Refunds</relationshipLabel>
        <relationshipName>AccountRefunds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>blng__Amount__c</fullName>
        <formula>blng__RefundedfromPayments__c + blng__RefundedfromCreditNoteLines__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrencyAmount__c</fullName>
        <label>Base Currency Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrencyFXDate__c</fullName>
        <label>Base Currency FX Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrencyFXRate__c</fullName>
        <label>Base Currency FX Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrency__c</fullName>
        <label>Base Currency</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__BillingFinanceBook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Finance Book</label>
        <referenceTo>blng__FinanceBook__c</referenceTo>
        <relationshipLabel>Refunds</relationshipLabel>
        <relationshipName>Refunds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__CheckNumber__c</fullName>
        <description>Reference to a check issued in an external system for this refund</description>
        <inlineHelpText>Reference to a check issued in an external system for this refund</inlineHelpText>
        <label>Check Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__GLRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Rule</label>
        <referenceTo>blng__GLRule__c</referenceTo>
        <relationshipLabel>Refunds</relationshipLabel>
        <relationshipName>RefundsGLRule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__GLTreatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Treatment</label>
        <referenceTo>blng__GLTreatment__c</referenceTo>
        <relationshipLabel>Refunds</relationshipLabel>
        <relationshipName>RefundsGLTreatment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__ImpactAmount__c</fullName>
        <formula>blng__Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Impact Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__LegalEntity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Entity</label>
        <referenceTo>blng__LegalEntity__c</referenceTo>
        <relationshipLabel>Refunds</relationshipLabel>
        <relationshipName>RefundsLegalEntity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>blng__PaymentGatewayTransactionID__c</fullName>
        <description>The transaction id that used to identify this refund in the payment gateway</description>
        <inlineHelpText>The transaction id that used to identify this refund in the payment gateway</inlineHelpText>
        <label>Payment Gateway Transaction ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__RefundDate__c</fullName>
        <label>Refund Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__RefundDescription__c</fullName>
        <label>Refund Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>blng__RefundLineCreationStatus__c</fullName>
        <description>A Fail status means that the refund line could not be created.  Please verify system configuration.</description>
        <inlineHelpText>A Fail status means that the refund line could not be created.  Please verify system configuration.</inlineHelpText>
        <label>Refund Line Creation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__RefundLineCreationStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__RefundMode__c</fullName>
        <description>External mode represents a refund that has been made in an external system and electronic represents a refund that is processed by Salesforce</description>
        <inlineHelpText>External mode represents a refund that has been made in an external system and electronic represents a refund that is processed by Salesforce</inlineHelpText>
        <label>Refund Mode</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__RefundMode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__RefundPaymentMethod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The payment method represents a credit card or banking information that can be used to process a payment</description>
        <inlineHelpText>The payment method represents a credit card or banking information that can be used to process a payment</inlineHelpText>
        <label>Refund Payment Method</label>
        <referenceTo>blng__PaymentMethod__c</referenceTo>
        <relationshipLabel>Refunds</relationshipLabel>
        <relationshipName>PaymentMethodRefunds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__RefundType__c</fullName>
        <label>Refund Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__PaymentType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__RefundedfromCreditNoteLines__c</fullName>
        <label>Refunded from Credit Note Lines</label>
        <summarizedField>blng__RefundLineCreditNoteLine__c.blng__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>blng__RefundLineCreditNoteLine__c.blng__Type__c</field>
            <operation>equals</operation>
            <value>Allocation</value>
        </summaryFilterItems>
        <summaryForeignKey>blng__RefundLineCreditNoteLine__c.blng__Refund__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__RefundedfromPayments__c</fullName>
        <label>Refunded from Payments</label>
        <summarizedField>blng__RefundLinePayment__c.blng__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>blng__RefundLinePayment__c.blng__Type__c</field>
            <operation>equals</operation>
            <value>Allocation</value>
        </summaryFilterItems>
        <summaryForeignKey>blng__RefundLinePayment__c.blng__Refund__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__PostingStatus</valueSetName>
        </valueSet>
    </fields>
    <label>Refund</label>
    <listViews>
        <fullName>blng__All</fullName>
        <columns>NAME</columns>
        <columns>blng__Account__c</columns>
        <columns>blng__Amount__c</columns>
        <columns>blng__RefundDate__c</columns>
        <columns>blng__RefundType__c</columns>
        <columns>blng__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{000}</displayFormat>
        <label>Refund Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Refunds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>